--- a/modules/preview_processor/templates/soffice.sh.erb
+++ b/modules/preview_processor/templates/soffice.sh.erb
@@ -14,7 +14,7 @@ RETVAL=0
 SOFFICE_PATH='/usr/lib64/openoffice.org3/program'
 SOFFICE_ARGS='-accept="socket,host=localhost,port=8100;urp" -headless -nofirststartwizard'
 SOFFICE_PIDFILE=/var/run/soffice.bin.pid
-OAE_USER=rsmart
+OAE_USER=<%= scope.lookupvar('preview_processor::processor_user') %>
 
 start_soffice() {
        echo -n $"Starting OpenOffice.org"
