Add more params.

--- a/modules/oae-app/templates/config/org/sakaiproject/nakamura/lite/storage/jdbc/JDBCStorageClientPool.config.erb
+++ b/modules/oae-app/templates/config/org/sakaiproject/nakamura/lite/storage/jdbc/JDBCStorageClientPool.config.erb
@@ -1,5 +1,5 @@
 service.pid="org.sakaiproject.nakamura.lite.storage.jdbc.JDBCStorageClientPool"
-service.bundleLocation="slinginstall:org.sakaiproject.nakamura.core-<%= version_nakcore %>.jar"
+service.bundleLocation="slinginstall:org.sakaiproject.nakamura.core-<%= version_sparse %>.jar"
 jdbc-driver="<%= sparsedriver %>"
 jdbc-url="<%= sparseurl %>
 username="<%= sparseuser %>"
