--- a/modules/oae/templates/sling_config.erb
+++ b/modules/oae/templates/sling_config.erb
@@ -1,3 +1,3 @@
+service.pid=<%= pid %>
 <% config.each_pair do |key, value| %>
-<%= key %>=<%= value %>
-<% end %>
+<%= key %>=<%= value %><% end %>
