--- a/modules/oae/templates/sakaioae.sh.erb
+++ b/modules/oae/templates/sakaioae.sh.erb
@@ -3,8 +3,8 @@
 # Global, editable VARS
 SAKAIOAE_JAVA_OPTS="-Xmx<%= javamemorymax %>m -server -XX:PermSize=<%= javapermsize %>m -Dcom.sun.management.jmxremote -Djava.awt.headless=true"
 SAKAIOAE_USER="<%= scope.lookupvar('oae::params::user')  %>"
-SAKAIOAE_HOME=<%= basedir %>
-SAKAIOAE_JAR="<%= basedir %>/jars/<%= jarfile %>"
+SAKAIOAE_HOME=<%= scope.lookupvar('oae::params::basedir') %>
+SAKAIOAE_JAR="<%= scope.lookupvar('oae::params::basedir') %>/jars/<%= jarfile %>"
 JAVA_BIN="/usr/bin/java"
 
 INIT_PID="/var/run/${SAKAIOAE_USER}.pid"
