--- a/modules/oae/templates/sakaioae.sh.erb
+++ b/modules/oae/templates/sakaioae.sh.erb
@@ -4,7 +4,7 @@
 SAKAIOAE_JAVA_OPTS="-Xmx<%= javamemorymax %>m -server -XX:PermSize=<%= javapermsize %>m -Dcom.sun.management.jmxremote -Djava.awt.headless=true"
 SAKAIOAE_USER="<%= scope.lookupvar('oae::params::user')  %>"
 SAKAIOAE_HOME=<%= scope.lookupvar('oae::params::basedir') %>
-SAKAIOAE_JAR="<%= scope.lookupvar('oae::params::basedir') %>/jars/<%= jarfile %>"
+SAKAIOAE_JAR="<%= scope.lookupvar('oae::params::basedir') %>/sakaioae.jar"
 JAVA_BIN="/usr/bin/java"
 
 INIT_PID="/var/run/${SAKAIOAE_USER}.pid"
