--- a/templates/sling_config.erb
+++ b/templates/sling_config.erb
@@ -1,2 +1,12 @@
-service.pid="<%= name[0..-8].gsub('/', '.') %>"<% config.each_pair do |key, value| %>
-<%= key %>=<% if value.is_a? String or value.is_a? Numeric %><%= "\"#{value}\"" %><% end %><% if value.is_a? TrueClass or value.is_a? FalseClass %><%= "B\"#{value}\"" %><% end %><% if value.is_a? Array %>[<%= value.map { |v| '"' + "#{v}"+ '"' }.join(",") %>]<% end %><% end %>
+service.pid="<%= name[0..-8].gsub('/', '.') %>"
+<% config.each_pair do |key, value| -%>
+<% if value.is_a? String or value.is_a? Numeric -%>
+<%= key %>=<%= "\"#{value}\"" %>
+<% end -%>
+<% if value.is_a? TrueClass or value.is_a? FalseClass -%>
+<%= key %>=<%= "B\"#{value}\"" %>
+<% end -%>
+<% if value.is_a? Array -%>
+<%= key %>=[<%= value.map { |v| '"' + "#{v}"+ '"' }.join(",") %>]
+<% end -%>
+<% end -%>
