--- a/templates/solr-context.xml.erb
+++ b/templates/solr-context.xml.erb
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Context docBase="<%= scope.lookupvar('oae::solr::common::solr_basedir')/solr.war %>" debug="0" crossContext="true">
+<Context docBase="<%= scope.lookupvar('oae::solr::common::solr_basedir') %>/solr.war" debug="0" crossContext="true">
   <Environment name="solr/home" type="java.lang.String" value="scope.lookupvar('oae::solr::common::solr_home') %>" override="true"/>
 </Context>
