Remove comment to fix bash syntax error

--- a/templates/tomcat.init.erb
+++ b/templates/tomcat.init.erb
@@ -9,7 +9,7 @@
 # Source function library.
 . /etc/init.d/functions
 
-RUN_AS_USER="<%= tomcat_user %>"# Adjust run user here
+RUN_AS_USER="<%= tomcat_user %>"
 CATALINA_HOME=<%= basedir %>
 
 start() {
