Add the tomcat-users.xml template

--- a/templates/tomcat-users.xml.erb
+++ b/templates/tomcat-users.xml.erb
@@ -1,6 +1,4 @@
 <?xml version='1.0' encoding='utf-8'?>
 <tomcat-users>
- <!-- Add the following lines + other users if you want to, to the equivalent file for your tomcat installation (found in conf-).
-        This is the easiest way (but not the most secure) to set up authenticated users for the Grouper UI -->
-  <user username="<%= admin_user %>" password="<%= admin_password" roles="manager,admin"/>
+  <user username="<%= admin_user %>" password="<%= admin_password %>" roles="manager,admin"/>
 </tomcat-users>
