Add -Dfile.encoding=UTF-8 to JAVA_OPTS.

--- a/templates/sakaioae.sh.erb
+++ b/templates/sakaioae.sh.erb
@@ -5,9 +5,9 @@
 # chkconfig: 2345 99 01
 # description: Sakai OAE app server.
 #
-SAKAIOAE_JAVA_OPTS="-Xmx<%= javamemorymax %>m -server -XX:PermSize=<%= javapermsize %>m -Dcom.sun.management.jmxremote -Djava.awt.headless=true"
+SAKAIOAE_JAVA_OPTS="-Xmx<%= javamemorymax %>m -server -XX:PermSize=<%= javapermsize %>m -Dcom.sun.management.jmxremote -Djava.awt.headless=true -Dfile.encoding=UTF-8 "
 SAKAIOAE_USER="<%= scope.lookupvar('oae::params::user')  %>"
-SAKAIOAE_HOME=<%= scope.lookupvar('oae::params::basedir') %>
+SAKAIOAE_HOME="<%= scope.lookupvar('oae::params::basedir') %>"
 SAKAIOAE_JAR="<%= scope.lookupvar('oae::params::basedir') %>/sakaioae.jar"
 JAVA_BIN="/usr/bin/java"
 
