--- a/templates/sakaioae.sh.erb
+++ b/templates/sakaioae.sh.erb
@@ -6,6 +6,8 @@
 # description: Sakai OAE app server.
 #
 SAKAIOAE_JAVA_OPTS="-Xmx<%= javamemorymax %>m -server -XX:PermSize=<%= javapermsize %>m -Dcom.sun.management.jmxremote -Djava.awt.headless=true -Dfile.encoding=UTF-8 "
+# Set the ClusterTrackingService host to the internal ip
+SAKAIOAE_CLUSTER_JAVA_OPTS="-Dorg.sakaiproject.nakamura.cluster.secure.host=<%= ipaddress %>"
 SAKAIOAE_USER="<%= scope.lookupvar('oae::params::user')  %>"
 SAKAIOAE_HOME="<%= scope.lookupvar('oae::params::basedir') %>"
 SAKAIOAE_JAR="<%= scope.lookupvar('oae::params::basedir') %>/sakaioae.jar"
@@ -28,7 +30,7 @@ echo "done.";
 debug() {
     echo -n "Starting SakaiOAE with JVM remote debugging port 8500: "
     SAKAIOAE_JAVA_DEBUG_OPTS="-Xdebug -Xrunjdwp:transport=dt_socket,address=8500,server=y,suspend=n"
-    su --login --command "${JAVA_BIN} ${SAKAIOAE_JAVA_OPTS} ${SAKAIOAE_JAVA_DEBUG_OPTS} -jar ${SAKAIOAE_JAR} > /dev/null 2>&1 &" ${SAKAIOAE_USER}
+    su --login --command "${JAVA_BIN} ${SAKAIOAE_JAVA_OPTS} ${SAKAIOAE_JAVA_DEBUG_OPTS} ${SAKAIOAE_CLUSTER_JAVA_OPTS} -jar ${SAKAIOAE_JAR} > /dev/null 2>&1 &" ${SAKAIOAE_USER}
     echo $$ > ${INIT_PID};
     echo "done.";
 }
