Use SSLCryptoDevice builtin. Do EC2 instances have SSL accelerators?

--- a/modules/rsmart-staging-config/templates/vhost-443.conf.erb
+++ b/modules/rsmart-staging-config/templates/vhost-443.conf.erb
@@ -20,6 +20,7 @@
     SSLEngine On
     SSLCipherSuite HIGH:MEDIUM
     SSLProtocol all -SSLv2
+    SSLCryptoDevice builtin
 
     SSLCertificateFile <%= certfile %>
     SSLCertificateKeyFile <%= certkeyfile %>
