--- a/modules/rsmart-staging-config/templates/vhost-8443.conf.erb
+++ b/modules/rsmart-staging-config/templates/vhost-8443.conf.erb
@@ -19,6 +19,7 @@
     SSLEngine On
     SSLCipherSuite HIGH:MEDIUM
     SSLProtocol all -SSLv2
+    SSLCryptoDevice builtin
 
     SSLCertificateFile <%= certfile %>
     SSLCertificateKeyFile <%= certkeyfile %>
