--- a/templates/sakaioae.sh.erb
+++ b/templates/sakaioae.sh.erb
@@ -5,7 +5,7 @@
 # chkconfig: 2345 99 01
 # description: Sakai OAE app server.
 #
-SAKAIOAE_JAVA_OPTS="-Xmx<%= javamemorymax %>m -server -XX:PermSize=<%= javapermsize %>m -Dcom.sun.management.jmxremote -Djava.awt.headless=true -Dfile.encoding=UTF-8 "
+SAKAIOAE_JAVA_OPTS=" -Dcom.sun.management.jmxremote -Djava.awt.headless=true -Dfile.encoding=UTF-8 "
 # Set the ClusterTrackingService host to the internal ip
 SAKAIOAE_CLUSTER_JAVA_OPTS="-Dorg.sakaiproject.nakamura.cluster.secure.host=<%= ipaddress %>"
 SAKAIOAE_USER="<%= scope.lookupvar('oae::params::user')  %>"
@@ -15,6 +15,11 @@ JAVA_BIN="/usr/bin/java"
 
 INIT_PID="/var/run/${SAKAIOAE_USER}.pid"
 
+# LOAD up JAVA_OPTS
+if [ -e $SAKAIOAE_HOME/bin/setenv.sh ]; then
+    . $SAKAIOAE_HOME/bin/setenv.sh
+fi
+
 help() {
 echo "$0 INVALID SYNTAX ::  Use:"
 echo "$0 {stop | start | debug | restart | status}"
@@ -22,7 +27,7 @@ echo "$0 {stop | start | debug | restart | status}"
 
 start() {
 echo -n "Starting SakaiOAE: "
-su --login --command "${JAVA_BIN} ${SAKAIOAE_JAVA_OPTS} ${SAKAIOAE_CLUSTER_JAVA_OPTS} -jar ${SAKAIOAE_JAR} > /dev/null 2>&1 &" ${SAKAIOAE_USER}
+su --login --command "${JAVA_BIN} ${JAVA_OPTS} ${SAKAIOAE_JAVA_OPTS} ${SAKAIOAE_CLUSTER_JAVA_OPTS} -jar ${SAKAIOAE_JAR} > /dev/null 2>&1 &" ${SAKAIOAE_USER}
 echo $$ > ${INIT_PID};
 echo "done.";
 }
@@ -30,7 +35,7 @@ echo "done.";
 debug() {
     echo -n "Starting SakaiOAE with JVM remote debugging port 8500: "
     SAKAIOAE_JAVA_DEBUG_OPTS="-Xdebug -Xrunjdwp:transport=dt_socket,address=8500,server=y,suspend=n"
-    su --login --command "${JAVA_BIN} ${SAKAIOAE_JAVA_OPTS} ${SAKAIOAE_JAVA_DEBUG_OPTS} ${SAKAIOAE_CLUSTER_JAVA_OPTS} -jar ${SAKAIOAE_JAR} > /dev/null 2>&1 &" ${SAKAIOAE_USER}
+    su --login --command "${JAVA_BIN} ${JAVA_OPTS} ${SAKAIOAE_JAVA_OPTS} ${SAKAIOAE_JAVA_DEBUG_OPTS} ${SAKAIOAE_CLUSTER_JAVA_OPTS} -jar ${SAKAIOAE_JAR} > /dev/null 2>&1 &" ${SAKAIOAE_USER}
     echo $$ > ${INIT_PID};
     echo "done.";
 }
