--- a/modules/rsmart-staging-config/templates/setenv.sh.erb
+++ b/modules/rsmart-staging-config/templates/setenv.sh.erb
@@ -1,8 +1,11 @@
 
 export JAVA_OPTS="-server -Xms <%= javamemorymin %>m -Xmx<%= javamemorymax %>m -XX:PermSize=<%= javapermsize %>m -XX:NewRatio=3 \
--XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled \
--XX:MaxTenuringThreshold=0 -XX:+UseNUMA \
--Djava.awt.headless=true -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps"
+-XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled \ 
+-XX:MaxTenuringThreshold=0 -XX:-DisableExplicitGC -XX:CMSInitiatingOccupancyFraction=80 \ 
+-XX:+UseStringCache -XX:+UseCompressedStrings -XX:+OptimizeStringConcat \ 
+-Djava.awt.headless=true -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps \ 
+-XX:+PrintGCDateStamps -XX:+PrintTenuringDistribution \ 
+-XX:+PrintCommandLineFlags"
 
 # AppDynamics support
 export JAVA_OPTS="$JAVA_OPTS -javaagent:/home/rsmart/appdynfull/current/javaagent.jar \
