--- a/templates/sakaioae.sh.erb
+++ b/templates/sakaioae.sh.erb
@@ -11,7 +11,7 @@ SAKAIOAE_CLUSTER_JAVA_OPTS="-Dorg.sakaiproject.nakamura.cluster.secure.host=<%= 
 SAKAIOAE_USER="<%= scope.lookupvar('oae::params::user')  %>"
 SAKAIOAE_HOME="<%= scope.lookupvar('oae::params::basedir') %>"
 SAKAIOAE_JAR="<%= scope.lookupvar('oae::params::basedir') %>/sakaioae.jar"
-JAVA_BIN="/usr/bin/java"
+JAVA_BIN="<%= java %>"
 
 INIT_PID="/var/run/${SAKAIOAE_USER}.pid"
 
