--- a/modules/rsmart-staging-config/templates/balancer-cle.erb
+++ b/modules/rsmart-staging-config/templates/balancer-cle.erb
@@ -21,7 +21,7 @@
     SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png)$ no-gzip dont-vary
     # Make sure proxies don't deliver the wrong content
     Header append Vary User-Agent env=!dont-vary
-</Location>
+</LocationMatch>
 
 <% locations_noproxy.each do |noproxy| %>
 ProxyPass <%= noproxy %> !
