Fix the config template.

--- a/templates/sling_config.erb
+++ b/templates/sling_config.erb
@@ -1,4 +1,4 @@
-service.pid="<%= name[0..-8].gsub('/', '.') %>"
+service.pid="<%= pid %>"
 <% config.each_pair do |key, value| -%>
 <% if value.is_a? String -%>
 <%= key %>=<%= "\"#{value}\"" %>
