--- a/modules/rsmart-staging-config/templates/vhost-443.conf.erb
+++ b/modules/rsmart-staging-config/templates/vhost-443.conf.erb
@@ -1,5 +1,8 @@
-
 # file managed by puppet
+# This is the Sakai OAE trusted content virtual host
+
+SSLCryptoDevice builtin
+
 <VirtualHost<% sslports.each do |port| -%> <%= port %><% end -%>>
   ServerName <%= name %>
 
@@ -10,7 +13,6 @@
     DocumentRoot <%= documentroot %>
 
     LogLevel warn
-
     ErrorLog <%= wwwroot %>/<%= name %>/logs/error.log
     CustomLog <%= wwwroot %>/<%= name %>/logs/access.log combined
     TransferLog <%= wwwroot %>/<%= name %>/logs/transfer.log
@@ -20,8 +22,6 @@
     SSLEngine On
     SSLCipherSuite HIGH:MEDIUM
     SSLProtocol all -SSLv2
-    SSLCryptoDevice builtin
-
     SSLCertificateFile <%= certfile %>
     SSLCertificateKeyFile <%= certkeyfile %>
     SSLCACertificateFile <%= cacertfile %>
