--- a/modules/rsmart-staging-config/templates/vhost-8443.conf.erb
+++ b/modules/rsmart-staging-config/templates/vhost-8443.conf.erb
@@ -1,5 +1,8 @@
-# This is the Sakai OAE untrusted content virtual host
 # file managed by puppet
+# This is the Sakai OAE untrusted content virtual host
+
+SSLCryptoDevice builtin
+
 <VirtualHost<% sslports.each do |port| -%> <%= port %><% end -%>>
   ServerName <%= name %>
 
@@ -8,7 +11,6 @@
 <% end -%>
 
     DocumentRoot <%= documentroot %>
-
     LogLevel warn
 
     ErrorLog <%= wwwroot %>/<%= name %>/logs/error.log
@@ -20,7 +22,6 @@
     SSLCipherSuite HIGH:MEDIUM
     SSLProtocol all -SSLv2
     SSLCryptoDevice builtin
-
     SSLCertificateFile <%= certfile %>
     SSLCertificateKeyFile <%= certkeyfile %>
     SSLCACertificateFile <%= cacertfile %>
