--- a/templates/postgresql.conf.erb
+++ b/templates/postgresql.conf.erb
@@ -46,6 +46,7 @@
 
 # - Connection Settings -
 
+listen_addresses = '*'
 #listen_addresses = 'localhost'		# what IP address(es) to listen on; 
 					# comma-separated list of addresses;
 					# defaults to 'localhost', '*' = all
