Fix the template

--- a/templates/export-line.erb
+++ b/templates/export-line.erb
@@ -1,1 +1,1 @@
-<% guests.each do |guest| -%><%= share %>	<%= guest[0] %>(<%= guest[1] %>)<% end %>
+<%= share %>	<% guests.each do |guest| %><%= guest[0] %>(<%= guest[1] %>)<% end %>
