Deliver the .oae_credentials.txt file to cofnigure the preview processor.

--- a/templates/run_preview_processor.sh.erb
+++ b/templates/run_preview_processor.sh.erb
@@ -6,7 +6,7 @@
 # PROCESSING_URL: url path to json containing items to be processed
 BASE_DIR="<%= scope.lookupvar('oae::params::basedir') %>"
 SCRIPT_DIR="${BASE_DIR}/nakamura/scripts";
-PASSWORD_FILE="${BASE_DIR}/.acad_credentials.txt";
+PASSWORD_FILE="${BASE_DIR}/.oae_credentials.txt";
 PROCESSING_URL="var/search/needsprocessing.json";
 ##############################################################################
 
