--- a/modules/rsmart-staging-config/templates/postgresql.conf.erb
+++ b/modules/rsmart-staging-config/templates/postgresql.conf.erb
@@ -197,7 +197,7 @@ checkpoint_completion_target = 0.9	# checkpoint target duration, 0.0 - 1.0
 
 # - Archiving -
 # Added archive_mode = on by Prabhu on 11/29/2011
-archive_mode = on
+archive_mode = off
 
 #archive_mode = off		# allows archiving to be done
 				# (change requires restart)
