NOJIRA restrict access to firebox.rsmart.com only

--- a/modules/rsmart-prod-config/templates/vhost-443.conf.erb
+++ b/modules/rsmart-prod-config/templates/vhost-443.conf.erb
@@ -12,6 +12,14 @@ SSLCryptoDevice builtin
 
     DocumentRoot <%= documentroot %>
 
+    # restrict all access to firebox
+    <Location />
+        Order deny,allow
+        Deny from all
+        Allow from firebox.rsmart.com
+        ErrorDocument 403 http://feynman.rsmart.com/downtime.html
+    </Location>
+
     LogLevel warn
     ErrorLog <%= wwwroot %>/<%= name %>/logs/error.log
     CustomLog <%= wwwroot %>/<%= name %>/logs/access.log combined
