--- a/modules/clusterconfig/templates/balancer.erb
+++ b/modules/clusterconfig/templates/balancer.erb
@@ -6,13 +6,15 @@
 </Proxy>
 
 ProxyPreserveHost On
-ProxyPass <%= location %> <%= balancer %>/
-# ProxyPassReverse <%= location %> <%= balancer %>/
+ProxyPass <%= location %> <%= balancer %>/ stickysession=ROUTEID nofailover=Off
 
 <Proxy <%= balancer %>>
 
-<% members.each do |member| %>
-    BalancerMember <%= proto %>://<%= member %><% params.each do |param| -%> <%= param %><% end -%>
+    # Sticky sessions based on the BalancerMember route attribute
+    Header add Set-Cookie "ROUTEID=.%{BALANCER_WORKER_ROUTE}e; path=/" env=BALANCER_ROUTE_CHANGED
+
+<% members.each_with_index do |member, index| -%>
+    BalancerMember <%= proto %>://<%= member %><% params.each do |param| -%> <%= param %><% end -%> route=<%= index %>
 <% end %>
 
 <% if standbyurl != "" -%>
