Sort the config keys so we always produce the same file.

--- a/templates/sling_config.erb
+++ b/templates/sling_config.erb
@@ -1,5 +1,5 @@
 service.pid="<%= pid %>"
-<% config.each_pair do |key, value| -%>
+<% config.sort!.each_pair do |key, value| -%>
 <% if value.is_a? String -%>
 <%= key %>=<%= "\"#{value}\"" %>
 <% end -%>
