Fix the key sorting.

--- a/templates/sling_config.erb
+++ b/templates/sling_config.erb
@@ -1,5 +1,6 @@
 service.pid="<%= pid %>"
-<% config.sort!.each_pair do |key, value| -%>
+<% config.keys.sort.each do |key| -%>
+<% value = config[key] -%>
 <% if value.is_a? String -%>
 <%= key %>=<%= "\"#{value}\"" %>
 <% end -%>
