ACAD-725 Mock out CLE content.

--- a/modules/rsmart-oipp-prod-config/templates/balancer-cle.erb
+++ b/modules/rsmart-oipp-prod-config/templates/balancer-cle.erb
@@ -1,5 +1,7 @@
 # file managed by puppet
 
+<% if scope.lookupvar('localconfig::mock_cle_content') %>
+
 <Proxy <%= balancer %>*>
     Order deny,allow
     Allow from all
@@ -39,3 +41,5 @@ ProxyPass <%= noproxy %> !
 <% end -%>
 
 </Proxy>
+
+<% end %>
