--- a/modules/rsmart-oipp-prod-config/templates/balancer-trusted.erb
+++ b/modules/rsmart-oipp-prod-config/templates/balancer-trusted.erb
@@ -6,8 +6,6 @@
 </Proxy>
 
 <Location <%= location %>>
-    ProxyPass <%= balancer %>/ stickysession=ROUTEID nofailover=Off
-    
     # Compress responses
     SetOutputFilter DEFLATE
     # Netscape 4.x has some problems...
@@ -25,6 +23,14 @@
 <% locations_noproxy.each do |noproxy| %>
 ProxyPass <%= noproxy %> !
 <% end %>
+
+<% if scope.lookupvar('localconfig::mock_cle_content') %>
+# Don't proxy to these tools. This is just a workaround, not a comprehensive list of CLE urls
+ProxyPass /access !
+ProxyPass /imsblti !
+<% end %>
+
+ProxyPass <%= location %> <%= balancer %>/ stickysession=ROUTEID nofailover=Off
 
 <Proxy <%= balancer %>>
 
