NOJIRA - Tune the apache load balancer configurations.

--- a/modules/rsmart-oipp-prod-config/templates/balancer-trusted.erb
+++ b/modules/rsmart-oipp-prod-config/templates/balancer-trusted.erb
@@ -28,9 +28,9 @@ ProxyPass <%= noproxy %> !
 # Don't proxy to these tools. This is just a workaround, not a comprehensive list of CLE urls
 ProxyPass /access !
 ProxyPass /imsblti !
-<% end %>
+<% end -%>
 
-ProxyPass <%= location %> <%= balancer %>/ stickysession=ROUTEID nofailover=Off
+ProxyPass <%= location %> <%= balancer %>/ stickysession=ROUTEID nofailover=Off lbmethod=byrequests timeout=60
 
 <Proxy <%= balancer %>>
 
