--- a/modules/rsmart-oipp-test-config/templates/balancer-trusted.erb
+++ b/modules/rsmart-oipp-test-config/templates/balancer-trusted.erb
@@ -30,7 +30,7 @@ ProxyPass /access !
 ProxyPass /imsblti !
 <% end -%>
 
-ProxyPass <%= location %> <%= balancer %>/ stickysession=ROUTEID nofailover=Off
+ProxyPass <%= location %> <%= balancer %>/ stickysession=ROUTEID nofailover=Off lbmethod=byrequests timeout=60
 
 <Proxy <%= balancer %>>
 
@@ -38,7 +38,7 @@ ProxyPass <%= location %> <%= balancer %>/ stickysession=ROUTEID nofailover=Off
     Header add Set-Cookie "ROUTEID=.%{BALANCER_WORKER_ROUTE}e; path=/" env=BALANCER_ROUTE_CHANGED
 
 <% members.each_with_index do |member,index| -%>
-    BalancerMember <%= proto %>://<%= member %><% params.each do |param| -%> <%= param %><% end -%> route=<% index %>
+    BalancerMember <%= proto %>://<%= member %><% params.each do |param| -%> <%= param %><% end -%> route=<%= index %>
 <% end %>
 
 <% if standbyurl != "" -%>
