--- a/modules/rsmart-prod-config/templates/balancer-trusted.erb
+++ b/modules/rsmart-prod-config/templates/balancer-trusted.erb
@@ -38,7 +38,7 @@ ProxyPass <%= location %> <%= balancer %>/ stickysession=ROUTEID nofailover=Off 
     Header add Set-Cookie "ROUTEID=.%{BALANCER_WORKER_ROUTE}e; path=/" env=BALANCER_ROUTE_CHANGED
 
 <% members.each_with_index do |member,index| -%>
-    BalancerMember <%= proto %>://<%= member %><% params.each do |param| -%> <%= param %><% end -%> route=<% index %>
+    BalancerMember <%= proto %>://<%= member %><% params.each do |param| -%> <%= param %><% end -%> route=<%= index %>
 <% end %>
 
 <% if standbyurl != "" -%>
